# A-share-quant-trading

./: .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.example.yml  pyproject.toml
.github/workflows/: ci.yml  lambda-kline-bootstrap.yml
config/: database-config.yaml  greptimedb.toml  main-config.yaml  market-data-config.yaml  message-config.yaml  news-strategy-config.yaml  secrets.yaml.example  simulation-config.yaml
data/: board_constituents.json  sectors.json  stock_blacklist.json
deploy/: kimi-config.toml
docs/: backtest-data-engine.md  data-integrity-pipeline.md  datetime-timezone-guide.md  dev-conventions.md  features.md  greptimedb-guide.md  iFinD-HTTP-API-manual.txt  intraday-reversal-detection-research.md  trade-outcome-analysis-guide.md  trading-safety-patterns.md  tsanghi-api-reference.md
lambda-kline/: Dockerfile  README.md  app.py  requirements.txt
models/: feature_list.json  lgbrank_latest.txt
scripts/: analyze_funnel.py  analyze_overnight.py  audit_sdb_diff.py  audit_trading_safety.py  backfill_momentum_scan.py  backtest_momentum.py  check_ths_deps.sh  clean_minute_dirty_data.py  cleanup_duplicate_note_shadows.py  compare_index_old_new.py  debug_backfill_upsert.py  diag_is_suspended.py  diagnose_cache_gaps.py  diagnose_gaps.py  download_board_constituents.py  download_board_constituents_ths.py  early_vs_fullday_top15.py  experiment_turnover_amp_fine_sweep.py  experiment_turnover_amp_lower_bound.py  feb_market_stats.py  fetch_announcements.py  fetch_limit_up.py  format_report.py  gap_fade_factor_screen.py  gap_fade_multi_period.py  gap_up_drop_analysis.py  install_ths_sdk.sh  intraday_momentum_alert.py  iquant_live.py  iquant_strategy.py  kimi_login_and_upload.ps1  list_sectors.py  load_listing_from_tushare.py  main.py  migrate_positions.py  migrate_positions.sql  migrate_positions_standalone.py  momentum_quality_experiment.py  optimize_early_fade.py  prefill_board_relevance_cache.py  (+9 more)
serverless/: Dockerfile  app.py  gen_test_payload.py  requirements.txt  s.yaml  test_payload.json
src/: __init__.py
tests/: conftest.py
(+219 files in other folders)
