[project]
name = "a-share-quant-trading"
version = "0.1.0"
description = "A quantitative trading system for China A-share market"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.19.0",
    "pyyaml>=6.0",
    "akshare>=1.18.0",
    "baostock>=0.8.8",
    "httpx>=0.27.0",
    "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.1",
    "mypy>=1.8",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Scripts need sys.path manipulation before imports
"scripts/*.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
# Relaxed mode for gradual type adoption
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
